--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://13b2d3bb-4d40-4e4e-8bd6-90519facf5d8.preview.emergentagent.com
 WDS_SOCKET_PORT=443
